# pod-scribe

./: .env.corrected  .env.example  .gitignore  ARCHITECTURAL_AUDIT.md  ARCHITECTURAL_REVIEW.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile.transcription-worker  EVENT_BUS_ARCHITECTURE.md  GPU_SETUP.md  IMPLEMENTATION_COMPLETE.md  LICENSE  Modelfile_sum  QUICKSTART.md  README.md  REVIEW.md  SERVICE_REFACTORING.md  backfill_rag.py  check_imports.py  check_selected.py  debug_status.py  docker-compose.dev.yml  docker-compose.yml  reproduce_bug.py  start_app.bat  task.md  test_event_bus.py  test_youtube_feed.py  test_yt.py  validate_syntax.py  verify_dashboard_fix.py
design_handover/: DESIGN_SPEC.md  README.md  api_endpoints.md
docs/: api_endpoints.md
docs/architecture/: event_bus.md
docs/archive/design_handover/: data_models.ts
docs/archive/history/: refactoring-project-summary.md  refactoring-summary.md
docs/history/: README.md  migration-guide.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts  index.ts  mockClient.ts  mockTranscriptionClient.ts  summarizationClient.ts  transcriptionClient.ts  types.ts
frontend/src/components/: ActionBar.css  ActionBar.tsx  AudioPlayer.css  AudioPlayer.tsx  BatchProgress.css  BatchProgress.tsx  ChatDrawer.css  ChatDrawer.tsx  ChatPopup.css  ChatPopup.tsx  EpisodeDetailModal.css  EpisodeDetailModal.tsx  FeedList.css  FeedList.tsx  LiveStatusBanner.css  LiveStatusBanner.tsx  MessageBubble.css  MessageBubble.tsx  Sidebar.css  Sidebar.tsx  SmartCard.css  SmartCard.tsx
frontend/src/context/: AudioContext.tsx
frontend/src/hooks/: useChatStream.ts
frontend/src/pages/: ChatPage.css  ChatPage.tsx  DashboardPage.css  DashboardPage.tsx  EpisodeExecBrief.css  EpisodeExecBrief.tsx  EpisodeQueuePage.css  EpisodeQueuePage.tsx  FeedManagerPage.css  FeedManagerPage.tsx  InboxPage.css  InboxPage.tsx  LibraryPage.css  LibraryPage.tsx  SmartLibraryPage.css  SmartLibraryPage.tsx  TranscriptsPage.css  TranscriptsPage.tsx
models/: Modelfile_rag
rag-service/: Dockerfile  HYBRID_SEARCH.md  README.md  build_indexes.py  fix_qdrant.py  ingest_transcript.py  inspect_qdrant.py  pyproject.toml  rag-environment.yml  start.sh  test_chat.py  test_rag_chat.py
rag-service/src/: __init__.py  config.py  event_subscriber.py  exceptions.py  main.py  models.py
rag-service/tests/: test_embeddings_batch.py  test_hybrid_retriever.py  test_hybrid_search_example.py  test_rrf_unit.py  test_streaming.py
scripts/: README.md  host_listener.py  init_database.py  migrate_feeds_and_queue.py  reproduce_duplicate_issue.py  reproduce_duplicate_issue_v2.py  reset_stuck_jobs.py  run_bot.bat  start_listener.bat  test_events.py
secrets/: .gitignore  README.md
shared/: events.py  pyproject.toml  reproduce_bug.py  verify_dashboard_fix.py
shared/config/: README.md  debug_feed.py  episodes.db  history.json  pending_episodes.json  status.json  subscriptions.json  subscriptions.json.old  test_dedup.py
shared/output/Huberman Lab/: Essentials_ Breathing for Mental & Physical Health & Performance _ Dr. Jack Feldman.txt  Essentials_ Science of Building Strong Social Bonds with Family, Friends & Romantic Partners.txt  Essentials_ The Biology of Slowing & Reversing Aging _ Dr. David Sinclair.txt  Essentials_ The Science of Making & Breaking Habits.txt  Essentials_ Time Perception, Memory & Focus.txt  How to Speak Clearly & With Confidence _ Matt Abrahams.txt  Master the Creative Process _ Twyla Tharp.txt  Using Red Light to Improve Metabolism & the Harmful Effects of LEDs _ Dr. Glen Jeffery.txt
shared/output/Learn/: NeurIPS 2025 in 12 Minutes_ The 6 Shifts Most People Will Miss Until It's Too Late.txt  PydanticAI_ the AI Agent Framework Winner.txt
shared/podcast_transcriber_shared/: __init__.py  database.py  events.py  gpu_lock.py  idempotency.py  logging_config.py  status_monitor.py
shared/summaries/: Essentials_ Breathing for Mental & Physical Health & Performance _ Dr. Jack Feldman_summary.json  Essentials_ Science of Building Strong Social Bonds with Family, Friends & Romantic Partners_summary.json  Essentials_ The Biology of Slowing & Reversing Aging _ Dr. David Sinclair_summary.json  Essentials_ The Science of Making & Breaking Habits_summary.json  Essentials_ Time Perception, Memory & Focus_summary.json  How to Speak Clearly & With Confidence _ Matt Abrahams_summary.json  Master the Creative Process _ Twyla Tharp_summary.json  NeurIPS 2025 in 12 Minutes_ The 6 Shifts Most People Will Miss Until It's Too Late_summary.json  PydanticAI_ the AI Agent Framework Winner_summary.json  Using Red Light to Improve Metabolism & the Harmful Effects of LEDs _ Dr. Glen Jeffery_summary.json  test_copy_summary.json  test_new_215930_summary.json
summarization-service/: .dockerignore  Dockerfile  README.md  process_existing.py  pyproject.toml  start.sh  summarization-environment.yml
summarization-service/config/: prompts.yaml
summarization-service/src/: __init__.py  config.py  event_subscriber.py  main.py  models.py  structured_models.py  structured_models_v2.py
summarization-service/src/routers/: __init__.py  summaries.py
summarization-service/src/services/: __init__.py  file_watcher.py  gemini_service.py  ollama_service.py
summarization-service/src/utils/: __init__.py  chunking.py  transcript_parser.py
transcription-service/: Dockerfile.api  README.md  environment.yml  pyproject.toml  pytorch-requirements.txt  test_feed.py
transcription-service/src/: __init__.py  cli.py  config.py  exceptions.py  main.py  models.py  verify_dashboard_fix.py  verify_selection_fix.py  worker_daemon.py
transcription-service/src/api/: models.py  requirements.txt  transcription_api.py
transcription-service/src/core/: __init__.py  audio.py  diarization.py  formatting.py  processor.py
transcription-service/src/managers/: __init__.py  episode_manager.py  status_monitor.py
transcription-service/src/utils/: rss_utils.py
(+16 files in other folders)
